--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+botfarm
 
 # Test binary, built with `go test -c`
 *.test
@@ -20,3 +21,5 @@
 # Go workspace file
 go.work
 
+# Configuration files
+config.*
